# gabaypoz-1

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
analysis/team4_model/: README.md  build_program_profile_v2.py  build_recommender_v1_1_datasets.py  evaluate_recommender_v2.py  export_supabase_universities.py  recommender_v1_1.py  recommender_v1_1_sensitivity.py  recommender_v1_2.py  recommender_v2.py  seed_recommender_questionnaire_v2.py  smoke_supabase_v2.py  test_evaluate_recommender_v2.py  test_program_profile_v2.py  test_recommender_v1_1.py  test_recommender_v1_2.py  test_recommender_v2.py  test_recommender_v2_supabase_contract.py
data/raw/: Univerisity_coords.xlsx  barangay_coords.xlsx  pozorrubio_commute_matrix.xlsx  supabase_commute_additions.csv  supabase_university_additions.csv
data/sample/: economic_burden.csv  questions.csv  scholarship_bridge.csv
demo/: Makefile  demo.py  demo.tex
docs/: tds.md  team4_model_dev_project_plan_v1.md  team4_recommender_v1_1_erd.md  team4_recommender_v2_erd.md  team4_recommender_v2_methodology.md  team4_recommender_v2_supabase_tracker.md  team4_recommender_v2_validation_plan.md
notebooks/: README.md  build_team4_recommender_smoke_notebook.py  team3_eda_figures_v1.ipynb
notebooks/.ipynb_checkpoints/: team4_recommender_supabase_smoke_gui-checkpoint.ipynb
reports/model/: program_profile_v2_manifest.json  program_profile_v2_review.csv  recommender_v2_evaluation.json  recommender_v2_evaluation.md  (+1 more)
tests/: test_recommender.py
(+66 files in other folders)
